<resources>
    <string name="app_name">EspolGuide</string>
    <string name="access_token"></string>

    <string name="university_name">ESPOL</string>
    <string name="search_poi_hint">Search in ESPOL</string>
    <string name="espol_username">ESPOL Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="name">Name</string>
    <string name="unity">Unity</string>
    <string name="description">Description</string>

    <string name="failed_connection_msg">Internet connection not available</string>
    <string name="http_error_msg">Error on connecting with server</string>
    <string name="loading_pois_names_error_msg">Error on loading place names</string>
    <string name="loading_poi_info_error_msg">Error on loading place information</string>
    <string name="wrong_credentials_msg">Wrong credentials entered</string>
    <string name="error_on_getting_location">Error on getting your location</string>
    <string name="error_on_calculating_route">Error on calculating route</string>
    <string name="error_on_loading_favorites">Error on loading favorite places</string>
    <string name="error_on_adding_favorite">Error on removing favorite</string>
    <string name="added_to_favorite">Added to favorite sites</string>
    <string name="removed_from_favorites">Removed from favorite sites</string>

    <string name="google_wrong_credentials_msg">Google wrong credentials entered</string>
    <string name="google_auth">Authenticated with Google</string>

    <string name="your_location">Your location</string>
    <string name="search_origin">Search a origin</string>
    <string name="search_destination">Search a destination</string>
    <string name="draw_route">Draw\nRoute</string>
    <string name="draw_route_poi">Draw route</string>

    <string name="greeting">Hello</string>

    <string name="map_menu_op">Campus Map</string>
    <string name="events_menu_op">Events</string>
    <string name="courses_menu_op">My Courses</string>
    <string name="favorites_menu_op">My Favorites</string>
    <string name="link_menu_op">Link my ESPOL account</string>
    <string name="logout_menu_op">Logout</string>

    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="fb_auth">Authenticated with Facebook</string>

    <string name="lectures">Lectures</string>
    <string name="exams">Exams</string>

    <string name="hour_unit">h</string>
    <string name="minute_unit">min</string>
    <string name="empty_time">   -   </string>

    <string name="getting_your_location">Obtaining your location</string>
    <string name="day">day(s)</string>
    <string name="block">block</string>
    <string name="room">room</string>

    <string name="events_tab_name">Events</string>
    <string name="reminder_tab_name">Reminders</string>
</resources>

