<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/functions_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/map_op"
            android:title="@string/map_menu_op" />

        <item
            android:id="@+id/events_op"
            android:title="@string/events_menu_op" />

        <item
            android:id="@+id/courses_op"
            android:title="@string/courses_menu_op" />

        <item
            android:id="@+id/favorites_op"
            android:title="@string/favorites_menu_op" />

    </group>

    <group android:id="@+id/others_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/link_op"
            android:title="@string/link_menu_op" />

        <item
            android:id="@+id/logout_op"
            android:title="@string/logout_menu_op" />

    </group>
</menu>